--- a/config/database.yml
+++ b/config/database.yml
@@ -10,6 +10,8 @@ default: &default
   collation: utf8mb4_unicode_ci
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
+  password:
+  host: 127.0.0.1
 
 development:
   <<: *default
@@ -21,3 +23,4 @@ development:
 test:
   <<: *default
   database: github_action_test
+  socket: /tmp/mysql.sock
