--- a/.github/workflows/action_ci.yml
+++ b/.github/workflows/action_ci.yml
@@ -15,19 +15,11 @@ jobs:
         ports:
           - "3306:3306"
         env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_HOST: 127.0.0.1
           MYSQL_DATABASE: github_action_test
-          # options: >-
-          #   --health-cmd="mysqladmin ping"
-          #   --health-interval=10s
-          #   --health-timeout=5s
-          #   --health-retries=3
-    env:
-      DB_USER: root
-      # DB_PASS: password
-      DB_HOST: 127.0.0.1
-      # DB_DB: cashare_cc_test
-      DB_PORT: 3306
+          MYSQL_USER: root
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_PASSWORD:
 
     steps:
       - uses: actions/checkout@v2
@@ -37,23 +29,29 @@ jobs:
           ruby-version: 2.7.2
           bundler: default
           bundler-cache: true
-      - uses: actions/cache@v2
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies
         run: |
           bundle install --retry 3
           yarn install
+          sudo service mysql start
+          systemctl status mysql.service
+      - uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       - name: DB prepare
         run: |
-          sudo service mysql start
-          bundle exec rake db:create
-          bundle exec rake db:migrate
+          echo '!!!!!!!!!!!!!'
+          echo $ DATABASE_HOST
+          echo $ DATABASE_PORT
+          mysql -h 127.0.0.1 --port 3306 -u root -e 'CREATE DATABASE IF NOT EXISTS github_action_test;'
+        # bundle exec rake db:create
         env:
-          DB_PORT: 3306
           RAILS_ENV: test
+          DATABASE_PORT: 3306
+          DATABASE_HOST: 127.0.0.1
       - name: Run tests
         run: |
+          bundle exec rake db:migrate
           rubocop
 
