--- a/.github/workflows/action_ci.yml
+++ b/.github/workflows/action_ci.yml
@@ -18,8 +18,8 @@ jobs:
           MYSQL_HOST: 127.0.0.1
           MYSQL_DATABASE: github_action_test
           MYSQL_USER: root
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_PASSWORD:
+          MYSQL_ROOT_PASSWORD: 12341234
+          # MYSQL_ALLOW_EMPTY_PASSWORD: yes
 
     steps:
       - uses: actions/checkout@v2
@@ -42,9 +42,9 @@ jobs:
       - name: DB prepare
         run: |
           echo '!!!!!!!!!!!!!'
-          echo $ DATABASE_HOST
-          echo $ DATABASE_PORT
-          mysql -h 127.0.0.1 --port 3306 -u root -e 'CREATE DATABASE IF NOT EXISTS github_action_test;'
+          echo $DATABASE_HOST
+          echo $DATABASE_PORT
+          mysql -h 127.0.0.1 --port 3306 -u root -p 12341234 -e 'CREATE DATABASE IF NOT EXISTS github_action_test;'
         # bundle exec rake db:create
         env:
           RAILS_ENV: test
@@ -53,5 +53,5 @@ jobs:
       - name: Run tests
         run: |
           bundle exec rake db:migrate
-          rubocop
+          bundle exec rubocop
 
