--- a/.github/workflows/action_ci.yml
+++ b/.github/workflows/action_ci.yml
@@ -18,8 +18,9 @@ jobs:
           MYSQL_HOST: 127.0.0.1
           MYSQL_DATABASE: github_action_test
           MYSQL_USER: root
-          MYSQL_ROOT_PASSWORD: 12341234
           # MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: password
 
     steps:
       - uses: actions/checkout@v2
@@ -44,7 +45,8 @@ jobs:
           echo '!!!!!!!!!!!!!'
           echo $DATABASE_HOST
           echo $DATABASE_PORT
-          mysql -h 127.0.0.1 --port 3306 -u root -p 12341234 -e 'CREATE DATABASE IF NOT EXISTS github_action_test;'
+          sudo mysql -h 127.0.0.1 --port 3306 -u root
+          GRANT ALL PRIVILEGES ON * . * TO 'root'@'%' WITH GRANT OPTION;
         # bundle exec rake db:create
         env:
           RAILS_ENV: test
