--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ default: &default
   encoding: utf8mb4
   collation: utf8mb4_unicode_ci
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: user
+  username: root
   password: password
   host: 127.0.0.1
 
