--- a/.github/workflows/action_ci.yml
+++ b/.github/workflows/action_ci.yml
@@ -9,20 +9,25 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      mysql:
-        image: mysql:8.0
-        ports:
-          - "3306:3306"
-        env:
-          MYSQL_HOST: 127.0.0.1
-          MYSQL_DATABASE: github_action_test
-          MYSQL_USER: root
-          # MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_PASSWORD: password
-          MYSQL_ROOT_PASSWORD: password
+    # services:
+    #   mysql:
+    #     image: mysql:8.0
+    #     ports:
+    #       - "3306:3306"
+    #     env:
+    #       MYSQL_HOST: 127.0.0.1
+    #       MYSQL_DATABASE: github_action_test
+    #       MYSQL_USER: root
+    #       # MYSQL_ALLOW_EMPTY_PASSWORD: yes
+    #       MYSQL_PASSWORD: password
+    #       MYSQL_ROOT_PASSWORD: password
 
     steps:
+      - uses: mirromutth/mysql-action@v1.1
+        with:
+          mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
+          mysql database: 'github_action_test' # Optional, default value is "test". The specified database which will be create
+          mysql root password: password # Required if "mysql user" is empty, default is empty. The root superuser password
       - uses: actions/checkout@v2
       - name: Setup Ruby 2.7.2
         uses: ruby/setup-ruby@v1
@@ -34,23 +39,11 @@ jobs:
         run: |
           bundle install --retry 3
           yarn install
-          sudo service mysql start
-          systemctl status mysql.service
       - name: DB prepare
-        run: |
-          echo '!!!!!!!!!!!!!'
-          echo $MYSQL_PWD
-          bundle exec rake db:create
-        # mysql --host 127.0.0.1 --port 3306 -u root -e "statement" ALTER USER 'root'@'localhost' IDENTIFIED BY 'password'
-        # GRANT ALL PRIVILEGES ON * . * TO 'root'@'%' WITH GRANT OPTION;
-        env:
-          RAILS_ENV: test
-          DATABASE_PORT: 3306
-          DATABASE_HOST: 127.0.0.1
-          MYSQL_PWD: password
-      - name: Run tests
         run: |
           bundle exec rake db:create
           bundle exec rake db:migrate
+      - name: Run tests
+        run: |
           bundle exec rubocop
 
