--- a/.github/workflows/action_ci.yml
+++ b/.github/workflows/action_ci.yml
@@ -9,27 +9,14 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    # services:
-    #   mysql:
-    #     image: mysql:8.0
-    #     ports:
-    #       - "3306:3306"
-    #     env:
-    #       MYSQL_HOST: 127.0.0.1
-    #       MYSQL_DATABASE: github_action_test
-    #       MYSQL_USER: root
-    #       # MYSQL_ALLOW_EMPTY_PASSWORD: yes
-    #       MYSQL_PASSWORD: password
-    #       MYSQL_ROOT_PASSWORD: password
-
     steps:
+      - uses: actions/checkout@v2
       - uses: mirromutth/mysql-action@v1.1
         with:
           mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
           mysql database: 'github_action_test' # Optional, default value is "test". The specified database which will be create
           mysql root password: password # Required if "mysql user" is empty, default is empty. The root superuser password
-      - uses: actions/checkout@v2
-      - name: Setup Ruby 2.7.2
+      - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7.2
@@ -43,7 +30,10 @@ jobs:
         run: |
           bundle exec rake db:create
           bundle exec rake db:migrate
+        env:
+          RAILS_ENV: test
       - name: Run tests
         run: |
           bundle exec rubocop
-
+        env:
+          RAILS_ENV: test
